@@ -20,20 +20,32 @@ synce_trayicon_SOURCES = $(BUILT_SOURCES) \
 			main.c \
 			stock-icons.h \
 			synce-trayicon.c synce-trayicon.h \
-			gtop_stuff.c gtop_stuff.h \
 			properties.c properties.h \
 			utils.c utils.h  \
 			device.c device.h \
 			device-manager.c device-manager.h \
-			udev-client.c udev-client.h \
-			hal-client.c hal-client.h \
-			vdccm-client.c vdccm-client.h \
-			odccm-client.c odccm-client.h \
 			dccm-client.c dccm-client.h \
 			keyring.c keyring.h \
 			device-info.c device-info.h \
 			module.c module.h \
 			synce_app_man.c synce_app_man.h
+
+if ENABLE_VDCCM_SUPPORT
+synce_trayicon_SOURCES += vdccm-client.c vdccm-client.h \
+			gtop_stuff.c gtop_stuff.h
+endif
+
+if ENABLE_ODCCM_SUPPORT
+synce_trayicon_SOURCES += odccm-client.c odccm-client.h
+endif
+
+if ENABLE_HAL_SUPPORT
+synce_trayicon_SOURCES += hal-client.c hal-client.h
+endif
+
+if ENABLE_UDEV_SUPPORT
+synce_trayicon_SOURCES += udev-client.c udev-client.h
+endif
 
 EXTRA_DIST = dccm-client-signals-marshal.list \
 		sync-engine.xml
@@ -45,6 +57,7 @@ synce_trayicon_CPPFLAGS = \
 	$(LIBRRA_CFLAGS) \
 	$(DBUS_CFLAGS) \
 	$(HAL_CFLAGS) \
+	$(GTOP_CFLAGS) \
 	$(LIBORANGE_CFLAGS) \
 	$(NOTIFY_CFLAGS) \
 	$(XML_CFLAGS)
@@ -56,6 +69,7 @@ synce_trayicon_LDADD = \
 	$(LIBRRA_LIBS) \
 	$(DBUS_LIBS) \
 	$(HAL_LIBS) \
+	$(GTOP_LIBS) \
 	$(LIBORANGE_LIBS) \
 	$(NOTIFY_LIBS) \
 	$(XML_LIBS)
